# minecraft-clone

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
cmake/: CompilerWarnings.cmake
lib/: CMakeLists.txt
lib/db_perlin/: CMakeLists.txt
lib/glad/: CMakeLists.txt
lib/glad/include/glad/: glad.h
lib/glad/src/: glad.c
lib/stb_image/: CMakeLists.txt
res/shaders/: chunk.fs  chunk.vs  plane.fs  plane.vs  quad.fs  quad.vs  simple.frag  simple.vert
src/: CMakeLists.txt  Game.cpp  Game.hpp  Shader.cpp  Shader.hpp  State.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp  main.cpp
src/common/: Direction.hpp  Ray.cpp  Ray.hpp  direction.hpp  ray.cpp  ray.hpp  types.hpp
src/general/: CMakeLists.txt  Mixins.hpp  Ray.cpp  db_perlin.cpp
src/gfx/: CMakeLists.txt  Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexLayout.cpp  VertexLayout.hpp  Window.cpp  Window.hpp  camera.cpp  camera.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_layout.cpp  vertex_layout.hpp  window.cpp  window.hpp
src/world/: Block.hpp  BlockMesh.cpp  BlockMesh.hpp  CMakeLists.txt  Chunk.cpp  Chunk.hpp  ChunkMesh.cpp  ChunkMesh.hpp  Direction.hpp  Generator.cpp  Generator.hpp  Player.cpp  Player.hpp  World.cpp  World.hpp  block.hpp  block_mesh.cpp  block_mesh.hpp  chunk.cpp  chunk.hpp  chunk_mesh.cpp  chunk_mesh.hpp  generator.cpp  generator.hpp  player.cpp  player.hpp  world.cpp  world.hpp
